Load workout from json
Added loading workouts from json using jquery.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <audio id="pauseSound"   src="short_beep.mp3"></audio>
     <audio id="halfWaySound" src="halfway_beeps.mp3"></audio>
     <!------- Main script -------->
+    <script src="jquery-3.7.1.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
