Play sound 3 seconds prior to start and stop

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     <!---------------------------->
     <div id="welcomeText">Press to Start</div>
     <!------ Audio elements ------>
-    <audio id="startSound"   src="long_beep.mp3"></audio>
-    <audio id="pauseSound"   src="short_beep.mp3"></audio>
-    <audio id="halfWaySound" src="halfway_beeps.mp3"></audio>
+    <audio id="startSound"      src="long_beep.mp3"></audio>
+    <audio id="almostPauseSound"src="almostSound.mp3"></audio>
+    <audio id="almostStartSound"src="almostSound.mp3"></audio>
+    <audio id="pauseSound"      src="short_beep.mp3"></audio>
+    <audio id="halfWaySound"    src="halfway_beeps.mp3"></audio>
     <!------- Main script -------->
     <script src="jquery-3.7.1.js"></script>
     <script src="script.js"></script>
