--- a/index.html
+++ b/index.html
@@ -17,11 +17,27 @@
     <!---------------------------->
     <div id="exercise-count"></div>
     <div id="exercise-name"></div>
-    <div id="timer"></div>
+    <!-- <div id="timer"></div> -->
     <div id="set-count"></div>
-    <div id="progress-bar-container">
-        <div id="progress-bar" hidden></div>
+    <!-- <div id="progress-bar-container"> -->
+    <!--     <div id="progress-bar" hidden></div> -->
+    <!-- </div> -->
+    <div class="container">
+        <!-- Left side -->
+        <div class="left">
+            <div id="timer">Timer</div>
+        </div>
+
+        <!-- Right side -->
+        <div class="right">
+
+            <div id="progress-bar-container">
+                <div id="progress-bar" hidden></div>
+            </div>
+
+        </div>
     </div>
+
     <!------- Main script -------->
     <script src="jquery-3.7.1.js"></script>
     <script src="script.js"></script>
